# HarvestEye-Edge

./: .gitignore  README.md  commit_script.ps1  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
app/: Dockerfile  config.py  database.py  db_models.py  inference.py  main.py  preprocessing.py  schemas.py
db/: init.sql
frontend/: api-docs.html  dashboard.html  index.html
frontend/css/: style.css
frontend/js/: app.js  dashboard.js  flamechart.js  heatmap.js  simulator.js  upload.js
models/: classifier_int8.onnx
nginx/: nginx.conf
training/: benchmark.py  dataset.py  export_onnx.py  model.py  quantize.py  train.py
